// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`expand.ts: expand copied from renderer and pasted on full-page 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "Expand title",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "hello there",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: expand with illegal content pasted in table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "title",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "panelType": "info",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "text": "content",
                  "type": "text",
                },
              ],
              "type": "paragraph",
            },
          ],
          "type": "panel",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: expand with legal content pasted in table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__expanded": false,
                    "title": "title",
                  },
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "attrs": Object {
                            "accessLevel": "CONTAINER",
                            "id": "here",
                            "text": "@here",
                            "userType": "SPECIAL",
                          },
                          "type": "mention",
                        },
                        Object {
                          "text": " hello",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "nestedExpand",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: expand with table with nestedExpand pasted on top level 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "title 1",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__autoSize": false,
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "__expanded": true,
                        "title": "title 2",
                      },
                      "content": Array [
                        Object {
                          "content": Array [
                            Object {
                              "text": "content",
                              "type": "text",
                            },
                          ],
                          "type": "paragraph",
                        },
                      ],
                      "type": "nestedExpand",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: nestedExpand pasted in table 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__expanded": false,
                    "title": "title",
                  },
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "hello there",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "nestedExpand",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: nestedExpand pasted on top level 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": false,
        "title": "title",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "text": "hello there",
              "type": "text",
            },
          ],
          "type": "paragraph",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: table with nestedExpand pasted inside an expand 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__expanded": true,
        "title": "title",
      },
      "content": Array [
        Object {
          "attrs": Object {
            "__autoSize": false,
            "isNumberColumnEnabled": false,
            "layout": "default",
          },
          "content": Array [
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableHeader",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "attrs": Object {
                        "__expanded": true,
                        "title": "111",
                      },
                      "content": Array [
                        Object {
                          "content": Array [
                            Object {
                              "text": "content",
                              "type": "text",
                            },
                          ],
                          "type": "paragraph",
                        },
                      ],
                      "type": "nestedExpand",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
            Object {
              "content": Array [
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
                Object {
                  "attrs": Object {
                    "background": null,
                    "colspan": 1,
                    "colwidth": null,
                    "rowspan": 1,
                  },
                  "content": Array [
                    Object {
                      "type": "paragraph",
                    },
                  ],
                  "type": "tableCell",
                },
              ],
              "type": "tableRow",
            },
          ],
          "type": "table",
        },
      ],
      "type": "expand",
    },
  ],
  "type": "doc",
}
`;

exports[`expand.ts: table with nestedExpand pasted on top level 1`] = `
Object {
  "content": Array [
    Object {
      "attrs": Object {
        "__autoSize": false,
        "isNumberColumnEnabled": false,
        "layout": "default",
      },
      "content": Array [
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "type": "paragraph",
                },
              ],
              "type": "tableHeader",
            },
          ],
          "type": "tableRow",
        },
        Object {
          "content": Array [
            Object {
              "attrs": Object {
                "background": null,
                "colspan": 1,
                "colwidth": null,
                "rowspan": 1,
              },
              "content": Array [
                Object {
                  "attrs": Object {
                    "__expanded": true,
                    "title": "title",
                  },
                  "content": Array [
                    Object {
                      "content": Array [
                        Object {
                          "text": "content",
                          "type": "text",
                        },
                      ],
                      "type": "paragraph",
                    },
                  ],
                  "type": "nestedExpand",
                },
              ],
              "type": "tableCell",
            },
          ],
          "type": "tableRow",
        },
      ],
      "type": "table",
    },
  ],
  "type": "doc",
}
`;
